# rtl-mc

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Doxyfile  LICENSE.md  README.md  long-rtlf.txt  meson.build  meson_options.txt  rtlf.txt  system.txt
src/: main.cpp  meson.build
src/abstractions/: PolyhedralAbstraction.h  meson.build
src/abstractions/general/: GeneralPolyhedralAbstraction.cpp  GeneralPolyhedralAbstraction.h  ObservablePatch.h  ObservablePatchSequence.h  ObservableTraversalNode.h  ObservableTraverseNode.h  SingOpenStatePair.h  meson.build  observable_patch_cartesian_product.cpp  observable_patch_cartesian_product.h
src/abstractions/omnidirectional/: OmnidirectionalPolyhedralAbstraction.cpp  OmnidirectionalPolyhedralAbstraction.h  Tile.h  TileExtractor.cpp  TileExtractor.h  TileNode.h  TripleTileNode.h  meson.build
src/automata/: Automaton.cpp  Automaton.h  AutomatonAcceptance.h  AutomatonOptimization.h  FiniteLtlAutomaton.cpp  FiniteLtlAutomaton.h  LtlAutomaton.cpp  LtlAutomaton.h  PolyhedralLtlAutomaton.cpp  PolyhedralLtlAutomaton.h  PolyhedralSystemFormulaDenotationMap.cpp  PolyhedralSystemFormulaDenotationMap.h  StateDenotation.h  TranslationOptimization.h  automata_builder.h  meson.build
src/automata/buchi/: PolyhedralBuchiLtlAutomaton.cpp  PolyhedralBuchiLtlAutomaton.h  meson.build
src/automata/büchi/: PolyhedralLtlBüchiAutomaton.cpp  PolyhedralLtlBüchiAutomaton.h  meson.build
src/automata/finite/: FiniteLtlAutomaton.cpp  FiniteLtlAutomaton.h  PolyhedralFiniteLtlAutomaton.cpp  PolyhedralFiniteLtlAutomaton.h  PolyhedralLtlFiniteAutomaton.cpp  PolyhedralLtlFiniteAutomaton.h  meson.build
src/automata/onthefly/: BackwardNFA.cpp  BackwardNFA.h  BackwardNFADepthFirstSearch.h  BackwardNFAPermutator.cpp  (+1 more)
src/automaton/: AtomSet.cpp  AtomSet.h  BackwardNFA.cpp  BackwardNFA.h  BackwardNFADepthFirstSearch.cpp  BackwardNFADepthFirstSearch.h  BackwardNFAPermutator.cpp  BackwardNFAPermutator.h  LabelDenotationMap.cpp  LabelDenotationMap.h  PolyhedralSystemFormulaDenotationMap.cpp  PolyhedralSystemFormulaDenotationMap.h  PolyhedralSystemLabelDenotationMap.cpp  PolyhedralSystemLabelDenotationMap.h  State.h  StateDenotation.h  meson.build  permutations.h
src/cli/: AutomatonOptimizationFlags.h  OutputFormat.h  PolyhedralAbstractionType.h  RtlMcProgram.h  Semantics.h  interface.cpp  interface.h  meson.build
src/core/: Denot.cpp  Denot.h  DenotIterative.cpp  DenotIterative.h  DenotRecursive.cpp  DenotRecursive.h  DenotRecursiveMemoization.cpp  DenotRecursiveMemoization.h  meson.build
src/discretisation/: DiscreteFiniteLtlFormula.h  DiscreteLtlFormula.h  discretisation.cpp  discretisation.h  meson.build
src/discretization/: DiscreteFiniteLtlFormula.h  DiscreteLtlFormula.h  discretization.cpp  discretization.h  meson.build
src/formula/: formula.cpp  formula.h  formula_constants.h  meson.build
src/geometry/: adjacency.h  closed.h  cone.h  interior.h  meson.build  omnidirectional.h  reflection.h
src/logger/: Verbosity.h  logger.h  meson.build
src/logging/: Verbosity.h  meson.build  setup.h
src/mcsolvers/: BrinkFiniteOnTheFlySolver.h  BrinkStayFiniteOnTheFlySolver.h  ExistentialDenotationFiniteSemanticsDfs.h  ExplicitSolver.h  FiniteOnTheFlySolver.h  FiniteSemanticsDfs.h  GeneralFiniteSolver.h  GeneralInfiniteSolver.h  GeneralSolver.h  OmnidirectionalFiniteSolver.h  OmnidirectionalInfiniteSolver.h  OmnidirectionalMaySolver.h  OmnidirectionalSolver.h  Solver.h  SolverResult.h  StayFiniteOnTheFlySolver.h  automata_builder.h  brink_stay_atoms.h  general_finite_solver.h  infinite_semantics_emptiness.h  meson.build  omnidirectional_finite_solver.h  omnidirectional_infinite_solver.h  omnidirectional_may_must_solver.h
src/onthefly/: Denot.h  DenotOnTheFly.h  meson.build
src/operators/: meson.build  pairwise_reduce.cpp  pairwise_reduce.h  reach.cpp  reach.h  traversal.cpp  traversal.h  traverse.cpp  traverse.h
src/parser/: ErrorListener.cpp  ErrorListener.h  LocationError.h  ParserError.h  Position.h  PositionError.h  SymbolTable.h  meson.build
src/product/: FiniteSynchronousProduct.cpp  FiniteSynchronousProduct.h  PolyhedralSynchronousProductAutomaton.cpp  PolyhedralSynchronousProductAutomaton.h  meson.build
src/stats/: AutomatonStats.h  DenotOnTheFlyStats.h  DenotStats.h  DiscretisationStats.h  DiscretizationStats.h  FiniteOnTheFlySolverStats.h  FormattableStats.h  PolyhedralFiniteLtlAutomatonStats.h  PolyhedralLtlAutomatonStats.h  PolyhedralLtlFiniteAutomatonStats.h  PolyhedralSystemStats.h  RtlFormulaStats.h  SolverStats.h  StatsFormatter.h  collectors.h  meson.build  stats_collectors.h
src/system/: AtomInterpretation.cpp  AtomInterpretation.h  Observable.h  PolyhedralSystem.cpp  PolyhedralSystem.h  PolyhedralSystemBuilder.cpp  PolyhedralSystemBuilder.h  PolyhedralSystemSymbolTable.cpp  PolyhedralSystemSymbolTable.h  meson.build
src/utils/: Timer.h  meson.build  ppl_aliases.h  ppl_utils.cpp  ppl_utils.h  spot_constants.h  spot_utils.cpp  spot_utils.h  utils.h
tests/: meson.build  test_utils.h
tests/automata/: meson.build  on_the_fly_tests.cpp  polyhedral_system_formula_denotation_map_tests.cpp
tests/automaton/: automaton_tests.cpp  meson.build  on_the_fly_tests.cpp
tests/benchmarks/: benchmark_utils.h  meson.build  parser.cpp  polyhedral-system-benchmark-1.txt
tests/brink/: brink_tests.cpp  meson.build
tests/denot/: denot_memoization_tests.cpp  denot_on_the_fly_tests.cpp  denot_tests.cpp  meson.build
tests/discretisation/: discretisation_tests.cpp  meson.build
tests/discretization/: discretization-test-1.txt  discretization_tests.cpp  meson.build
tests/formula/: is_non_recurrent_tests.cpp  meson.build  remove_sing_tests.cpp
tests/geometry/: meson.build
tests/observables/: meson.build  observables_tests.cpp
tests/operators/: meson.build  traversal_operator_tests.cpp  traverse_operator_tests.cpp
tests/parser/: meson.build  parse_system_tests.cpp
tests/ppl/: meson.build
tests/tile/: meson.build  tilextractor_observable_interpretation_fixtures.h  tilextractor_tests.cpp
tests/utils/: meson.build
(+409 files in other folders)
