current_source_dir = meson.current_source_dir()

automaton_source_files = [
    current_source_dir / 'Automaton.h',
    current_source_dir / 'Automaton.cpp',
    current_source_dir / 'LtlAutomaton.h',
    current_source_dir / 'LtlAutomaton.cpp',
    current_source_dir / 'PolyhedralSystemFormulaDenotationMap.h',
    current_source_dir / 'PolyhedralSystemFormulaDenotationMap.cpp',
    current_source_dir / 'StateDenotation.h',
]

subdir('finite')

project_source_files += automaton_source_files