current_source_dir = meson.current_source_dir()

automaton_source_files = [
    current_source_dir / 'BackwardNFA.cpp',
    current_source_dir / 'BackwardNFA.h',
    current_source_dir / 'PolyhedralSystemFormulaDenotationMap.h',
    current_source_dir / 'PolyhedralSystemFormulaDenotationMap.cpp',
    current_source_dir / 'StateDenotation.h',
]

project_source_files += automaton_source_files