current_source_dir = meson.current_source_dir()

automaton_source_files = [
    current_source_dir / 'BackwardNFA.cpp',
    current_source_dir / 'BackwardNFA.h',
    current_source_dir / 'PolyhedralSystemFormulaDenotationMap.h',
    current_source_dir / 'PolyhedralSystemFormulaDenotationMap.cpp',
]

subdir('onthefly')

project_source_files += automaton_source_files