current_source_dir = meson.current_source_dir()

cli_source_files = [
    current_source_dir / 'RtlMcProgram.h',
    current_source_dir / 'AutomatonOptimizationFlags.h',
    current_source_dir / 'OutputFormat.h',
    current_source_dir / 'interface.h',
    current_source_dir / 'interface.cpp'
]

project_source_files += cli_source_files