current_source_dir = meson.current_source_dir()

discretisation_source_files = [
    current_source_dir / 'discretisation.cpp',
    current_source_dir / 'discretisation.h',
    current_source_dir / 'DiscreteLtlFormula.h',
    current_source_dir / 'DiscreteFiniteLtlFormula.h',
]

project_source_files += discretisation_source_files