current_source_dir = meson.current_source_dir()

discretization_source_files = [
    current_source_dir / 'discretization.cpp',
    current_source_dir / 'discretization.h',
    current_source_dir / 'DiscreteLtlFormula.h',
    current_source_dir / 'DiscreteFiniteLtlFormula.h',
]

project_source_files += discretization_source_files