current_source_dir = meson.current_source_dir()
geometry_source_files = [
    current_source_dir / 'interior.h',
    current_source_dir / 'adjacency.h',
    current_source_dir / 'cone.h',
    current_source_dir / 'omnidirectional.h',
    current_source_dir / 'reflection.h',
]
project_source_files += geometry_source_files