current_source_dir = meson.current_source_dir()

mc_solvers_source_files = [
    current_source_dir / 'omnidirectional_finite_solver.h',
    current_source_dir / 'omnidirectional_infinite_solver.h',
    current_source_dir / 'omnidirectional_may_must_solver.h',
    current_source_dir / 'general_finite_solver.h',
    current_source_dir / 'automata_builder.h',
]

subdir('onthefly')

project_source_files += mc_solvers_source_files