current_source_dir = meson.current_source_dir()

concurrent_dir = 'concurrent'
core_source_files = [
    current_source_dir / 'Denot.h',
    current_source_dir / 'DenotOnTheFly.h',
    current_source_dir / 'DenotOnTheFly.cpp',
    current_source_dir / concurrent_dir / 'DenotConcurrentV1.h',
    current_source_dir / concurrent_dir / 'DenotConcurrentV1.cpp',
    current_source_dir / concurrent_dir / 'DenotConcurrentV2.h',
    current_source_dir / concurrent_dir / 'DenotConcurrentV2.cpp',
    current_source_dir / concurrent_dir / 'DenotConcurrentV3.h',
    current_source_dir / concurrent_dir / 'DenotConcurrentV3.cpp',
    current_source_dir / concurrent_dir / 'DenotConcurrentV4.h',
    current_source_dir / concurrent_dir / 'DenotConcurrentV4.cpp',
]

project_source_files += core_source_files