current_source_dir = meson.current_source_dir()

operators_source_files = [
    current_source_dir / 'pairwise_reduce.h',
    current_source_dir / 'pairwise_reduce.cpp',
    current_source_dir / 'reach.h',
    current_source_dir / 'reach.cpp',
    current_source_dir / 'traversal.h',
    current_source_dir / 'traversal.cpp',
]

project_source_files += operators_source_files