current_source_dir = meson.current_source_dir()
stats_source_file = [
    current_source_dir / 'PolyhedralSystemStats.h',
    current_source_dir / 'AutomatonStats.h',
    current_source_dir / 'DenotStats.h',
    current_source_dir / 'RtlFormulaStats.h',
    current_source_dir / 'DiscretisationStats.h',
    current_source_dir / 'StatsFormatter.h',
    current_source_dir / 'stats_collectors.h',
]
project_source_files += stats_source_file