current_source_dir = meson.current_source_dir()

stats_source_files = [
    current_source_dir / 'AutomatonStats.h',
    current_source_dir / 'DenotOnTheFlyStats.h',
    current_source_dir / 'DiscretisationStats.h',
    current_source_dir / 'FiniteOnTheFlySolverStats.h',
    current_source_dir / 'FormattableStats.h',
    current_source_dir / 'PolyhedralLtlFiniteAutomatonStats.h',
    current_source_dir / 'PolyhedralLtlAutomatonStats.h',
    current_source_dir / 'PolyhedralSystemStats.h',
    current_source_dir / 'RtlFormulaStats.h',
    current_source_dir / 'SolverStats.h',
    current_source_dir / 'stats_collectors.h',
]

project_source_files += stats_source_files