current_source_dir = meson.current_source_dir()

polyhedral_system_source_files = [
    current_source_dir / 'Observable.h',
    current_source_dir / 'PolyhedralSystem.h',
    current_source_dir / 'PolyhedralSystem.cpp',
    current_source_dir / 'PolyhedralSystemSymbolTable.h',
    current_source_dir / 'PolyhedralSystemSymbolTable.cpp',
    current_source_dir / 'PolyhedralSystemBuilder.h',
    current_source_dir / 'PolyhedralSystemBuilder.cpp',
    current_source_dir / 'AtomInterpretation.h',
    current_source_dir / 'AtomInterpretation.cpp',
]

project_source_files += polyhedral_system_source_files