current_source_dir = meson.current_source_dir()

ppl_utils_source_files = [
    current_source_dir / 'ppl_utils.h',
    current_source_dir / 'ppl_utils.cpp',
    current_source_dir / 'ppl_aliases.h',
]

spot_utils_source_files = [
    current_source_dir / 'spot_utils.h',
    current_source_dir / 'spot_utils.cpp',
    current_source_dir / 'spot_constants.h',
]

project_source_files += ppl_utils_source_files
project_source_files += spot_utils_source_files