current_source_dir = meson.current_source_dir()

general_abstraction_source_files = [
    current_source_dir / 'ObservablePatch.h',
    current_source_dir / 'ObservablePatchSequence.h',
    current_source_dir / 'GeneralPolyhedralAbstraction.h',
    current_source_dir / 'GeneralPolyhedralAbstraction.cpp',
]

abstractions_source_files += general_abstraction_source_files