current_source_dir = meson.current_source_dir()


observable_patch_cartesian_product_source_files = [
    current_source_dir / 'observable_patch_cartesian_product.h',
    current_source_dir / 'observable_patch_cartesian_product.cpp',
]

general_abstraction_source_files = [
    current_source_dir / 'ObservablePatch.h',
    current_source_dir / 'ObservablePatchSequence.h',
    current_source_dir / 'GeneralPolyhedralAbstraction.h',
    current_source_dir / 'GeneralPolyhedralAbstraction.cpp',
    current_source_dir / 'ObservableTraverseNode.h',
    current_source_dir / 'SingOpenStatePair.h',
]

abstractions_source_files += general_abstraction_source_files + observable_patch_cartesian_product_source_files