current_source_dir = meson.current_source_dir()

omnidirectional_source_files = [
    current_source_dir / 'Tile.h',
    current_source_dir / 'TileExtractor.h',
    current_source_dir / 'TileExtractor.cpp',
    current_source_dir / 'TileNode.h',
    current_source_dir / 'TripleTileNode.h',
    current_source_dir / 'OmnidirectionalPolyhedralAbstraction.h',
    current_source_dir / 'OmnidirectionalPolyhedralAbstraction.cpp'
]

project_source_files += omnidirectional_source_files