current_source_dir = meson.current_source_dir()

omnidirectional_abstraction_source_files = [
    current_source_dir / 'Tile.h',
    current_source_dir / 'TileNode.h',
    current_source_dir / 'TripleTileNode.h',
    current_source_dir / 'OmnidirectionalPolyhedralAbstraction.h',
    current_source_dir / 'OmnidirectionalPolyhedralAbstraction.cpp'
]

subdir('tilextractor')

abstractions_source_files += omnidirectional_abstraction_source_files